# golomb-set

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: build.rs  contains.rs  insert.rs  packing.rs
data/: v4_uuids.py.gcs  v4_uuids.txt  v4_uuids_short.py.gcs  v4_uuids_short.txt
examples/: collisions.rs  efficiency.rs
src/: lib.rs
tests/: lib.rs  rasky.rs
