[package]
name = "golomb-set"
version = "0.1.1"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
description = "A Golomb Coded Set implementation"
documentation = "https://docs.rs/golomb-set"
repository = "https://github.com/1aim/golomb-set"
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
digest = "0.8.0"
byteorder = "1.3.1"
bitbit = "0.2.0"
num-integer = "0.1.39"
bitvec = "0.11.1"
num = "0.2.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
proptest = "0.9.2"
md-5 = "0.8.0"
sha-1 = "0.8.1"
uuid = "0.7.4"
criterion = "0.2.11"
rand = "0.6.5"

[[bench]]
name = "build"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "insert"
harness = false

[profile.release]
debug = true
