[package]
name = "golomb-set"
version = "0.2.0"
authors = ["Ferdia McKeogh <ferdia@mckeogh.tech>"]
description = "A Golomb Coded Set implementation"
documentation = "https://docs.rs/golomb-set"
repository = "https://github.com/1aim/golomb-set"
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
digest = "0.8.1"
byteorder = "1.3.2"
bitbit = "0.2.0"
num-integer = "0.1.41"
bitvec = "0.15.0"
num = "0.2.0"
failure = "0.1.5"
failure_derive = "0.1.5"

[dev-dependencies]
proptest = "0.9.4"
md-5 = "0.8.0"
sha-1 = "0.8.1"
uuid = "0.7.4"
criterion = "0.2.11"
rand_core = "0.5.0"
rand_xorshift = "0.2.0"
bloom = "0.3.2"
twox-hash = { version = "1.4.2", features = ["digest"] }
doc-comment = "0.3.1"
cargo-husky = { version = "1.4.0", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }

[[bench]]
name = "packing"
harness = false

[[bench]]
name = "contains"
harness = false

[[bench]]
name = "insert"
harness = false
